# corfo

./: .env.example  .gitignore  main.py  pyproject.toml  requirements.txt
.cursor/: README.md
.cursor/docs/explorador-roadmap/: 01-multi-select-filters.md  02-timeseries-opening-year.md  03-fx-clp-conversion.md  04-graph-stable-layout.md  README.md
corfo_etl/: __init__.py  cli.py  models.py  normalize.py  parse_pdf.py  parse_pdf_plumber.py  supabase_load.py
supabase/: schema.sql
supabase/migrations/: 20250425140000_corfo_schema.sql
web/: .env.example  README.md  next.config.ts  package.json  pnpm-lock.yaml
web/app/: layout.tsx  page.tsx
web/app/explorador/: company-fund-graph.tsx  empresas-panel-toggle.tsx  explorador-filters.tsx  explorador-vista-toggle.tsx  fund-filter-tags.tsx  investment-bar-chart.tsx  multi-select-filter.tsx  page.tsx
web/lib/: explorador-href.ts  explorador-params.ts
web/lib/corfo/: format.ts  graph.ts  queries.ts  types.ts
web/lib/supabase/: server.ts
