[project]
name = "corfo"
version = "0.1.0"
description = "CORFO capital de riesgo PDF → Supabase ETL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pypdf>=5.0",
    "typing_extensions>=4.12",
    "python-dotenv>=1.0",
    "supabase>=2.0",
]

[project.optional-dependencies]
pdfplumber = ["pdfplumber>=0.11"]

[project.scripts]
corfo-etl = "corfo_etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["corfo_etl"]
